# personal-work-panel

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  使用说明.txt  项目开发需求.md
scripts/: verify-windows-subsystem.ps1
src/: App.tsx  main.tsx  motion.css  store.test.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Common.tsx  EditableTaskName.test.tsx  EditableTaskName.tsx  IdeasView.tsx  MarkdownExportSettings.tsx  ProjectsView.tsx  TaskDetail.tsx  TodayView.tsx
src/lib/: backend.ts
